feat(cli): restructure agent help and skill guidance